# squarepair

./: .gitignore  README.md  generate.ipynb  pyproject.toml
src/: calculate_pairs.py  csv_writer.py  image_maker.py  sort_overlapping_lists.py  video_maker.py  visualize.py
