[project]
name = "squarepair"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.0",
    "scipy>=1.17.0",
    "ty>=0.0.17",
    "ty-extensions>=0.1.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
